# amatsukaze-log

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  TASKS.md  docker-compose.dev.yml  pyproject.toml  requirements.txt
config/: config.example.yaml
docs/: architecture.md
src/collector/: database.py  parser.py  sender.py  watcher.py
src/models/: config.py  log_entry.py
src/utils/: condition_evaluator.py
tests/unit/: test_database.py  test_parser.py  test_sender.py  test_watcher.py
